Fix highlight line wrap in Firefox

--- a/components/headline/index.css
+++ b/components/headline/index.css
@@ -76,6 +76,7 @@
   --background-color: rgb(var(--current-background, 255, 255, 255)); /* 1 */
   display: inline;
   padding: 0.22em 0 0.1em;
+  box-decoration-break: clone;
   background-color: rgb(var(--current-background));
   box-shadow:
     -0.7rem 0 0 var(--background-color),
